Bug 301544 - k3b doesn't find sox
Summary: k3b doesn't find sox
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: K3bSetup (other bugs)
Version First Reported In: 2.0.2
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Michał Małek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-10 01:09 UTC by Janet
Modified: 2012-07-08 20:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2012-06-10 01:09:50 UTC
Although sox package is installed (Debian Sid, sox --version: sox:      SoX v14.4.0) k3b reports "not found". sox executable is in /usr/bin. I tried reinstalling but that did not change anything.


Reproducible: Always
Comment 1 Pino Toscano 2012-07-08 20:23:53 UTC
Git commit 2b672a2928d57b1132644ee4da1d6c664050bce1 by Pino Toscano.
Committed on 08/07/2012 at 22:20.
Pushed by pino into branch '2.0'.

fix sox detection with sox >= 14.4.0

sox 1.14.0 changed the string that is printed out on --version, breaking the simply string matching done;
add a new case to cover also this new version

(cherry picked from commit 79cd49cac3a6b7031556aae53ce3ecff8c360cb9)

M  +3    -0    plugins/encoder/sox/k3bsoxencoder.cpp

http://commits.kde.org/k3b/2b672a2928d57b1132644ee4da1d6c664050bce1
Comment 2 Pino Toscano 2012-07-08 20:23:54 UTC
Git commit 79cd49cac3a6b7031556aae53ce3ecff8c360cb9 by Pino Toscano.
Committed on 08/07/2012 at 22:20.
Pushed by pino into branch 'master'.

fix sox detection with sox >= 14.4.0

sox 1.14.0 changed the string that is printed out on --version, breaking the simply string matching done;
add a new case to cover also this new version

M  +3    -0    plugins/encoder/sox/k3bsoxencoder.cpp

http://commits.kde.org/k3b/79cd49cac3a6b7031556aae53ce3ecff8c360cb9