fix sox detection with sox >= 14.4.0

sox 1.14.0 changed the string that is printed out on --version, breaking the simply string matching done;
add a new case to cover also this new version

BUG: 301544